<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".post.activity.PostProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/post_product_title"
        app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/product_name_container_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inner_layout_height"
            android:layout_margin="@dimen/inner_layout_margin"
            android:orientation="horizontal"
            android:textSize="@dimen/text_size">

            <TextView
                android:id="@+id/product_name_label"
                android:layout_width="@dimen/label_container_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/name_label"></TextView>

            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_price_container_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inner_layout_height"
            android:layout_margin="@dimen/inner_layout_margin"
            android:orientation="horizontal"
            android:textSize="@dimen/text_size">

            <TextView
                android:id="@+id/product_price_label"
                android:layout_width="@dimen/label_container_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/price_label"></TextView>

            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"></EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_loc_container_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inner_layout_height"
            android:layout_margin="@dimen/inner_layout_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_loc_label"
                android:layout_width="@dimen/label_container_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/loc_label"
                android:textSize="@dimen/text_size"></TextView>

            <EditText
                android:id="@+id/product_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="2"
                android:textSize="@dimen/text_size"></EditText>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="199dp"
            android:layout_height="66dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"></ProgressBar>

        <LinearLayout
            android:id="@+id/product_tag_container_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inner_layout_height"
            android:layout_margin="@dimen/inner_layout_margin">

            <TextView
                android:id="@+id/product_tag_label"
                android:layout_width="@dimen/label_container_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tag_label"
                android:textSize="@dimen/text_size"></TextView>

            <Button
                android:id="@+id/tags_add_button"
                android:layout_width="@dimen/add_tag_button_size"
                android:layout_height="@dimen/add_tag_button_size"
                android:layout_margin="@dimen/small_button_margin"
                android:gravity="center"
                android:text="@string/add_label"></Button>

            <EditText
                android:id="@+id/new_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size"></EditText>

        </LinearLayout>


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tags_group_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:singleLine="false"></com.google.android.material.chip.ChipGroup>


        <Button
            android:id="@+id/post_button"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="@dimen/submit_button_height"
            android:layout_gravity="center"
            android:text="@string/post_button_text"></Button>


    </LinearLayout>
</LinearLayout>
